Corrigiendo services y material icons

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li class="menu__item"><a href="#contact" class="menu__link">Contact</a></li>
                 </ul>
 
-                <span class="material-icons menu-hamburguer">
+                <span class="material-icons menu-hamburguer" translate="no">
                     menu
                 </span>
 
@@ -53,7 +53,7 @@
                 <h2 class="services__title">We offer high demand services</h2>
                 <article class="cards">
                     <div class="card">
-                        <span class="material-icons card__icon">
+                        <span class="material-icons card__icon" translate="no">
                             mode_edit
                         </span>
                         <h3 class="card__title">UI/UX Design</h3>
@@ -64,7 +64,7 @@
                         <button class="card__btn">Get started</button>
                     </div>
                     <div class="card">
-                        <span class="material-icons card__icon card__icon--green">
+                        <span class="material-icons card__icon card__icon--green" translate="no">
                             code
                         </span>
                         <h3 class="card__title">Front End</h3>
@@ -75,7 +75,7 @@
                         <button class="card__btn card__btn--active">Get started</button>
                     </div>
                     <div class="card">
-                        <span class="material-icons card__icon card__icon--red">
+                        <span class="material-icons card__icon card__icon--red" translate="no">
                             list
                         </span>
                         <h3 class="card__title">Back End</h3>
